Refactor alignment and styling in index.html for improved layout and readability

--- a/index.html
+++ b/index.html
@@ -525,19 +525,19 @@
             "
           >
             <span>
-              <div style="margin-left: 380px">عميد /</div>
+              <div>عميد /</div>
               <div style="padding-right: 50px">
                 <span>قائد قوة المهام والواجبات الخاصة</span>
                 <span style="margin-right: 2px">فيصل بن خالد النفيسة</span>
               </div>
             </span>
           </p>
-          <button
+          <!-- <button
             class="btn btn-warning btn-sm edit-btn"
             onclick="editText('signatureName')"
           >
             تعديل
-          </button>
+          </button> -->
         </div>
       </div>
 
