Refactor alignment and styling in index.html for improved layout and readability

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             "
           >
             <span>
-              <div>عميد /</div>
+              <div style="margin-left: 280px">عميد /</div>
               <div style="padding-right: 50px">
                 <span>قائد قوة المهام والواجبات الخاصة</span>
                 <span style="margin-right: 2px">فيصل بن خالد النفيسة</span>
