Adjust font sizes in index.html for improved readability

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         padding: 8px;
       }
       .table td {
-        font-size: 14px;
+        font-size: 12px; /* غيّرت من 14px إلى 12px */
         font-weight: bold;
       }
       /* تعديل عرض الأعمدة */
@@ -271,7 +271,7 @@
       }
       @media (max-width: 430px) {
         .table {
-          font-size: 9px;
+          font-size: 8px; /* غيّرت من 9px إلى 8px */
           min-width: 600px;
         }
         .table-responsive {
