Add VSCode settings for Live Server and clean up HTML comments

--- a/index.html
+++ b/index.html
@@ -655,15 +655,15 @@
             <p>رقيب الحركة والآليات</p>
           </div>
           <p class="greeting">السلام عليكم ورحمة الله وبركاته</p>
-          <div class="section">
+          <!-- <div class="section">
             <h2 class="subtitle">عن المهمة التالية</h2>
-          </div>
-          <!-- <h2 class="title">الجدول الثالث - المهام المكتملة</h2>
+          </div> -->
+          <h2 class="title">الجدول الثالث - المهام المكتملة</h2>
           <h4 class="header fs-6">
             بيان بالمهام المكتملة ليوم
             <span id="second-selected-date"></span>
             <span id="second-print-selected-date" class="print-date"></span>
-          </h4> -->
+          </h4>
           <div class="table-responsive table-section">
             <table
               class="table table-bordered table-striped text-center align-middle"
